@@ -1,6 +1,7 @@
 New in SVN (will be 0.11)
 -------------------------
 
+* Tested with reportlab from SVN trunk
 * Support for Dinu Gherman's svglib. If both svglib and uniconvertor are available,
   svglib is preferred (for SVG, of course). Patch originally by rute.
 * Issue 109: Separate styles for each kind of admonition
